[package]
name                    = "ligen"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-macro.workspace     = true
ligen-ir.workspace        = true
ligen-utils.workspace     = true
ligen-traits.workspace    = true
ligen-parser.workspace    = true
ligen-generator.workspace = true
ligen-common.workspace    = true
