[package]
name                    = "ligen"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-macro.workspace       = true
ligen-idl.workspace         = true
ligen-ir.workspace          = true
ligen-utils.workspace       = true
ligen-traits.workspace      = true
ligen-transformer.workspace = true
ligen-common.workspace      = true
