[package]
name        = "ligen"
version     = "0.1.4"
authors     = ["Danilo Guanabara <danguafer@gmail.com>"]
edition     = "2018"
description = "Language Interface Generator Core"
license     = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
ligen-core  = { version = "0.1.3", path = "../core" }
