[package]
name          = "ligen"
version       = "0.1.8"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "Language Interface Generator Core"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
ligen-core = "0.1.8"
