[package]
name          = "ligen"
version       = "0.1.9"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "Language Interface Generator Core"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen"

[dependencies]
ligen-macro = { path = "../macro" }
ligen-core  = { path = "../core"  }
