[package]
name          = "ligen-macro"
version       = "0.1.15-alpha.0"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "Language Interface Generator Core"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen"
readme        = "../../README.md"

[lib]
proc-macro = true

[dependencies]
ligen-core = { path = "../core" }
