[package]
name          = "ligen"
version       = "0.1.15"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "Language Interface Generator Core"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen"
readme        = "../../README.md"

[dependencies]
ligen-macro = "=0.1.15"
ligen-core  = "=0.1.15"
