[package]
name          = "ligen"
version       = "0.1.17-alpha.0"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "Language Interface Generator Core"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen"
readme        = "../../README.md"

[dependencies]
#ligen-proc_macro = "0.1.16"
#ligen-core  = "0.1.16"
ligen-macro = { path = "../macro" }
ligen-core  = { path = "../core" }
