CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("example-c")

IF(TARGET ${PROJECT_NAME})
RETURN()
ENDIF()

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/../../target/ligen/c/example example)

AUX_SOURCE_DIRECTORY(src SOURCES)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC example)
