[package]
name    = "example"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ligen-macro = { path = "../../ligen/macro" }

[build-dependencies]
# FIXME: Is syn really necessary?
syn          = "1.0.74"
ligen        = { path = "../../ligen" }
ligen-c      = { path = "../../generators/ligen-c" }
ligen-cmake  = { path = "../../generators/ligen-cmake" }
ligen-csharp = { path = "../../generators/ligen-csharp" }