[package]
name    = "example"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bindings = ["ligen", "ligen-cargo", "ligen-rust", "ligen-csharp"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ligen-macro = { path = "../../ligen/macro" }

[build-dependencies]
ligen        = { path = "../../ligen", optional = true }
ligen-cargo  = { path = "../../generators/ligen-cargo", optional = true }
ligen-rust   = { path = "../../generators/ligen-rust", optional = true }
ligen-csharp = { path = "../../generators/ligen-csharp", optional = true }
