[package]
name          = "ligen-c"
version       = "0.1.3-alpha.0"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "C binding generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-c"
readme        = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir     = { path = "../../ligen/ir" }
ligen-traits = { path = "../../ligen/traits" }
ligen-utils  = { path = "../../ligen/utils" }
serde_json = "1.0.73"

