[package]
name = "ligen-cargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir     = { path = "../../ligen/ir" }
ligen-traits = { path = "../../ligen/traits" }
ligen-utils  = { path = "../../ligen/utils" }
cargo_toml   = "0.10.2"