[package]
name          = "ligen-csharp"
version       = "0.1.0"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
description   = "C# binding generator"
license       = "Apache-2.0"
documentation = "https://docs.rs/ligen-c"
readme        = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen = { path = "../../ligen" }
lazy_static = "1.4.0"
handlebars = "4.1.3"
serde_json = "1.0.68"