[package]
name = "ligen-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir     = { path = "../../ligen/ir" }
ligen-traits = { path = "../../ligen/traits" }
handlebars = { version = "4.1.6", features = [ "dir_source"] }
serde_json = "1.0.73"