[package]
name = "ligen-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir     = { path = "../../ligen/ir" }
ligen-traits = { path = "../../ligen/traits" }
ligen-utils  = { path = "../../ligen/utils" }
handlebars = "4.1.6"
serde_json = "1.0.73"
syn          = { version = "1.0.73", features = [ "full" ] }
proc-macro2  = "1.0.26"
quote        = "1.0.9"
cargo_toml   = "0.10.0"
