[package]
name = "ligen-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json   = "1.0.64"
cargo_toml   = "0.10.0"
derive_more  = "0.99.16"
serde        = { version = "1.0.126", features = [ "derive" ] }
shrinkwraprs = "0.3.0"
