[package]
name = "ligen-common"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
cargo_toml.workspace   = true # FIXME: Rusty. Remove cargo_toml from here.
derive_more.workspace  = true
serde_json.workspace   = true
serde.workspace        = true
shrinkwraprs.workspace = true
