[package]
name = "ligen-generator"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-common.workspace = true
ligen-ir.workspace = true