[package]
name = "ligen-generator"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-common.workspace = true
ligen-ir.workspace = true
ligen-utils.workspace = true
is-tree.workspace = true

serde_json.workspace = true
handlebars = "4.1.6"
