[package]
name = "ligen-idl"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[features]
mocks = []

[dependencies]
ligen-common.workspace  = true
serde.workspace         = true
serde_json.workspace    = true
enum-as-inner.workspace = true
is-tree.workspace       = true
regex.workspace         = true
schemars.workspace      = true
strum                   = { version = "0.25.0", features = ["derive"] }
semver                  = { version = "1.0.20", features = ["serde"] }
heck                    = "0.4.1"
