[package]
name = "ligen-parser"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-ir.workspace     = true
ligen-common.workspace = true
ligen-transformer.workspace = true
pretty_assertions.workspace = true
syn.workspace = true
serde.workspace = true

[dev-dependencies]
ligen-ir = { workspace = true, features = ["mocks"] }