[package]
name = "ligen-parsing"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-ir.workspace     = true
ligen-common.workspace = true

[dev-dependencies]
ligen-ir = { workspace = true, features = ["mocks"]}