[package]
name     = "ligen-traits"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir       = { path = "../ir" }
ligen-utils    = { path = "../utils" }
ligen-common   = { path = "../common" }
serde          = { version = "1.0.126", features = [ "derive" ] }
handlebars     = "4.1.6"
