[package]
name = "ligen-traits"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
description.workspace   = true
license.workspace       = true
documentation.workspace = true
readme.workspace        = true

[dependencies]
ligen-idl.workspace     = true
ligen-utils.workspace  = true
ligen-common.workspace = true
serde.workspace        = true
serde_json.workspace   = true
