[package]
name = "ligen-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn          = { version = "1.0.73", features = [ "full" ] }
serde_json   = "1.0.64"
cargo_toml   = "0.10.0"
derive_more  = "0.99.16"
serde        = { version = "1.0.126", features = [ "derive" ] }
shrinkwraprs = "0.3.0"
proc-macro2  = "1.0.26"
quote        = "1.0.9"
