[package]
name    = "ligen-rust-runtime"
version = "0.1.0"
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bindings = ["ligen", "ligen-cargo", "ligen-rust", "ligen-c", "ligen-cmake"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ligen-macro = { path = "../../ligen/macro" }

[build-dependencies]
ligen        = { path = "../../ligen", optional = true }
ligen-cargo  = { path = "../../generators/ligen-cargo", optional = true }
ligen-rust   = { path = "../../generators/ligen-rust", optional = true }
ligen-cmake  = { path = "../../generators/ligen-cmake", optional = true }
ligen-c      = { path = "../../generators/ligen-c", optional = true }
#ligen-csharp = { path = "../../generators/ligen-csharp", optional = true }
