[package]
name = "ligen-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-ir.workspace = true
ligen-traits.workspace = true
ligen-transformer.workspace = true

ligen-rust-parser.workspace = true
ligen-python-parser.workspace = true
ligen-rust-pyo3-importer.workspace = true

serde.workspace = true
clap = { version = "4.4.8", features = ["derive"] }