[package]
name = "ligen-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen-idl.workspace = true
ligen-traits.workspace = true
ligen-transformer.workspace = true

ligen-rust-parser.workspace = true
ligen-python-parser.workspace = true
ligen-openapi-parser.workspace = true
ligen-anchor-parser.workspace = true
ligen-rust-client-generator.workspace = true
ligen-anchor-generator.workspace = true
ligen-rust-pyo3-importer.workspace = true

serde.workspace = true
serde_json.workspace = true
clap = { version = "4.4.8", features = ["derive"] }
anyhow.workspace = true