[package]
name = "ligen-editor"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
ligen-gui-runtime.workspace = true
ligen-ir.workspace = true
serde.workspace = true
ligen-parsing.workspace = true
ligen-cargo.workspace = true
ligen-python-parser.workspace = true
ligen-traits.workspace = true
ligen-python-exporter.workspace = true
egui_tiles = "0.2.0"
stacker = "0.1.15"
boolinator = "2.4.0"