[package]
name = "ligen-editor"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
ligen-gui-runtime.workspace = true
ligen-idl.workspace = true
serde.workspace = true
ligen-python-parser.workspace = true
ligen-rust-parser.workspace = true
ligen-traits.workspace = true
ligen-transformer.workspace = true
ligen-rust-pyo3-importer.workspace = true
egui_tiles = "0.7"
stacker = "0.1.15"
boolinator = "2.4.0"