[package]
name = "ligen-anchor-generator"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
ligen-ir.workspace = true
ligen-generator.workspace = true
anchor-lang-idl-spec.workspace = true
anyhow.workspace = true