[package]
name = "ligen-anchor-generator"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
ligen-idl.workspace = true
ligen-transformer.workspace = true
anchor-lang-idl-spec.workspace = true
anyhow.workspace = true
sha2.workspace = true
is-tree.workspace = true