[package]
name = "ligen-anchor-parser"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true

[features]
ir = []

[dependencies]
anchor-lang-idl-spec.workspace = true
serde_json.workspace = true
ligen-idl.workspace = true
ligen-transformer.workspace = true